Configure database Add Corrs

--- a/Prototype.Api/appsettings.json
+++ b/Prototype.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PersonDb": "Server=(localdb)\\mssqllocaldb;Database=PersonDB;Trusted_Connection=True;"
+    "PersonDb": "Server=localhost\\SQLEXPRESS;Database=PersonDB;Trusted_Connection=True;"
   }
 }
