To test in container withour db connection issues

--- a/Prototype.Api/Prototype.Api.csproj
+++ b/Prototype.Api/Prototype.Api.csproj
@@ -6,6 +6,7 @@
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysisLevel>latest</AnalysisLevel>
+    <AssemblyName>Prototype.Api</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
