--- a/Prototype.Api/Properties/launchSettings.json
+++ b/Prototype.Api/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49716",
-      "sslPort": 44391
+      "applicationUrl": "http://localhost:49716"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
